Fixed bottom social media links alignment and more CSS added

--- a/src/CSS/landing.module.css
+++ b/src/CSS/landing.module.css
@@ -46,6 +46,12 @@ div.header {
     font-family: Garamond, serif;
     font-weight: 600;
 }
+
+.donateBtn:hover {
+    box-shadow: 0px 0px 10px var(--primary-white);
+
+}
+
 div.buttonNav {
     float: right;
 }
@@ -162,6 +168,7 @@ hr {
     align-items: center;
     justify-content: center;
     margin-top: 100px;
+    padding-left: 0px;
 }
 
 .twitter {
@@ -216,6 +223,10 @@ li {
     flex: 3;
     width: 250px;
 
+}
+
+.footerBtn:hover {
+    box-shadow: 0px 0px 10px var(--primary-white);
 }
 
 .contactInfo {
